:lipstick: [assets] adds Everex assets

--- a/public/index.html
+++ b/public/index.html
@@ -15,35 +15,29 @@
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     />
-    <title>Burner</title>
-    <meta
-      name="description"
-      content="Trasfer xDai quickly then burn your private key."
-    />
+    <title>EVEREX</title>
+    <meta name="description" content="Everex Wallet Demo" />
     <meta
       name="keywords"
-      content="dai, xdai, wallet, burner, crypto, ethereum, poa, payment, transactions"
+      content="everex, wallet, crypto, ethereum, poa, payment, transactions, demo"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@austingriffith" />
-    <meta name="twitter:title" content="Burner" />
-    <meta
-      name="twitter:description"
-      content="Trasfer xDai quickly then burn your private key."
-    />
+    <meta name="twitter:site" content="@everexio" />
+    <meta name="twitter:title" content="EVEREX" />
+    <meta name="twitter:description" content="Everex Wallet Demo" />
     <meta
       name="twitter:img:src"
-      content="https://xdai.io/burner-wallet-banner.png"
+      content="https://daks2k3a4ib2z.cloudfront.net/59157962bdb4300afa8771a9/5954988ec21883086b9489b9_EVX.png"
     />
-    <meta name="og:title" content="Burner" />
+    <meta name="og:title" content="EVEREX" />
     <meta name="og:type" content="website" />
-    <meta name="og:url" content="https://xdai.io" />
-    <meta name="og:image" content="https://xdai.io/burnercard2.jpg" />
+    <meta name="og:url" content="https://www.everex.io/" />
     <meta
-      name="og:description"
-      content="Trasfer xDai quickly then burn your private key."
+      name="og:image"
+      content="https://daks2k3a4ib2z.cloudfront.net/59157962bdb4300afa8771a9/5954988ec21883086b9489b9_EVX.png"
     />
-    <meta name="og:site_name" content="Burner" />
+    <meta name="og:description" content="Everex Wallet Demo" />
+    <meta name="og:site_name" content="EVEREX" />
     <link
       href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed"
       rel="stylesheet"
