update title and tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#fd7e14" />
+    <meta name="theme-color" content="#354f9c" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
       rel="stylesheet"
@@ -15,16 +15,16 @@
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
     />
-    <title>Burner</title>
+    <title>Everex Demo Wallet</title>
     <meta
       name="description"
       content="Trasfer xDai quickly then burn your private key."
     />
     <meta
       name="keywords"
-      content="dai, xdai, wallet, burner, crypto, ethereum, poa, payment, transactions"
+      content="evxp, everex, wallet, crypto, ethereum, payment, transactions"
     />
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@austingriffith" />
     <meta name="twitter:title" content="Burner" />
     <meta
@@ -43,7 +43,7 @@
       name="og:description"
       content="Trasfer xDai quickly then burn your private key."
     />
-    <meta name="og:site_name" content="Burner" />
+    <meta name="og:site_name" content="Burner" /> -->
     <link
       href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed"
       rel="stylesheet"
